DFR-2267: prevent uploading encrypted file - general application